--- a/recovery/root/init.recovery.mt6833.rc
+++ b/recovery/root/init.recovery.mt6833.rc
@@ -1,63 +1,31 @@
-import /init.recovery.trustonic.rc
+on init
+    setprop sys.usb.configfs 1
+    setprop sys.usb.ffs.aio_compat 1
 
-service keystore_auth /system/bin/keystore_auth
-    oneshot
-    user system
-    group root
-    seclabel u:r:recovery:s0
+on fs && property:ro.debuggable=0
+    # distinguish USB shoulde connect or not, i.e. CDP vs SDP
+    write /sys/class/udc/musb-hdrc/device/cmode 2
+    # set charging free due to it wait for USB activation
+    start adbd
 
-on property:ro.crypto.state=encrypted && property:ro.crypto.type=file
-    install_keyring
-    setprop crypto.ready 1
+on post-fs
+    # Support A/B feature for EMMC and UFS boot region
+    wait /dev/block/mmcblk0boot0 2
+    symlink /dev/block/sda /dev/block/mmcblk0boot0
+    symlink /dev/block/sdb /dev/block/mmcblk0boot1
+    symlink /dev/block/mmcblk0boot0 /dev/block/platform/bootdevice/by-name/preloader_a
+    symlink /dev/block/mmcblk0boot1 /dev/block/platform/bootdevice/by-name/preloader_b
 
-on property:hwservicemanager.ready=true && property:crypto.ready=1
-    start cryptoeng_oplus
-    start keymaster-4-0
-    start gatekeeper-1-0
+    # Support A/B feature for combo emmc and ufs OTA update
+    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/platform/bootdevice/by-name/preloader_emmc_a
+    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/platform/bootdevice/by-name/preloader_emmc_b
+    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/platform/bootdevice/by-name/preloader_ufs_a
+    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/platform/bootdevice/by-name/preloader_ufs_b
 
-on property:ro.crypto.state=unsupported
-    setprop crypto.ready 0
-    stop cryptoeng_oplus
-    stop mobicore
-    stop keymaster-4-0
-    stop gatekeeper-1-0
+    # Support A/B feature for combo emmc and ufs OTA update
+    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/by-name/preloader_emmc_a
+    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/by-name/preloader_emmc_b
+    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/by-name/preloader_ufs_a
+    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/by-name/preloader_ufs_b
 
-on property:ro.crypto.state=unencrypted
-    setprop crypto.ready 0
-    stop cryptoeng_oplus
-    stop mobicore
-    stop keymaster-4-0
-    stop gatekeeper-1-0
-
-on post-fs-data
-    mkdir /data/vendor_de 0770 system system
-    mkdir /data/vendor_de/0 0770 system system
-    mkdir /data/vendor_de/0/cryptoeng 0770 system system
-
-on boot
-    start health-hal-2-1
-
-service gatekeeper-1-0 /system/bin/hw/android.hardware.gatekeeper@1.0-service
-    user root
-    group root
-    disabled
-    seclabel u:r:recovery:s0
-
-service cryptoeng_oplus /vendor/bin/hw/vendor.oplus.hardware.cryptoeng@1.0-service
-    user root
-    group root input sdcard_rw sdcard_r
-    disabled
-    seclabel u:r:recovery:s0
-
-service keymaster-4-0 /vendor/bin/hw/android.hardware.keymaster@4.0-service.trustonic
-    user root
-    group root drmrpc
-    disabled
-    seclabel u:r:recovery:s0
-
-on property:twrp.decrypt.done=true && property:twrp.all.users.decrypted=true
-    setprop crypto.ready 0
-    stop cryptoeng_oplus
-    stop mobicore
-    stop keymaster-4-0
-    stop gatekeeper-1-0
+    exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
